_downlite_styles.css
/* ... */
.searchResultsProduct a h6 span.pricePrefix{
	font-size: 15px;
    font-style: italic;
    font-weight: 400;
}
.filterCategoryCont{
}
.resetButton{
	background-image: url("images/SearchBg.png");
    border: 1px solid #BFBFBD;
    color: #858585;
    font-size: 14px;
    font-weight: bold;
    margin: 0;
    padding: 9px 30px;
}

div.nav_menu div.caroufredsel_wrapper{
	overflow:visible !important;
	position:absolute !important;
	margin-top: 11px !important;
}

#brandCategories{
	display:block;
}

.standardDef{
	display:block;
}
.sixhundredfourtyResolution{
	display:none;
}
.fourHundredEightyResolution{
	display:none;
}

.nav_menu ul li a{
	color: #605B57;
    float: left;
    font-size: 15px;
    font-weight: bold;
    padding: 21px 12px;
    text-decoration: none;
}

.subButton {
    background-image: url("images/SearchBg.png");
    border: 1px solid #BFBFBD;
    color: #858585;
    float: left;
    font-size: 13px;
    font-weight: bold;
    margin: 25px 0 0 20px;
    padding: 9px;
    width: 90px;
}

.categoryBox  a{
	 text-decoration: none;
}
.catName span {
	color: #6F7376;
    font-size: 15px;
	text-decoration:none;
}

.basePrice span.value{
	font-style: italic;
}
.basePrice span.value span{
	font-size: 15px;
    font-style: italic;
    font-weight: 400;
}
.basePrice span.value span.cents{
	font-size: 22px;
    font-weight: bold;
}
.retailPrice{
	color: #6F7376;
}
.retailPrice span{
	color: #6F7376;
	font-style:italic;
}
span.savings{
	color: #6F7376;
}

.prodManufacturer{
}
.prodManufacturer a{
	color: #4D4D4D;
}
.prodManufacturer a:hover{
	color:#D65E00;
}

td.tabbedProductContentTD div.prodTabs ul.tabs li{
	padding: 15px 0;
}
td.tabbedProductContentTD div.prodTabs ul.tabs li.ui-tabs-active{
	border-bottom:none;
}
.tabbedProductContentTD .ui-tabs-panel{
	border-top:none;
}

#prodViewerReviewSummary a{
	cursor: pointer;
    text-decoration: underline;
}

.contactUsForm{
	float: right;
	width: 315px;
}
#contactContent{
}
.sideline a{
	padding: 5px 0;
}

#prodlistAccessoriesContainer li{
	float: left;
}
.productListTemplateAccessories img{
	float: left;
}
.productListTemplateAccessories div.accessProdName{
	float: left;
    margin-left: 5px;
    width: 170px;
}
.productListTemplateAccessories div.basePrice{
	float: left;
    margin-left: 5px;
}

.prodViewerContainer .prodThumbs div{
	float: left;
    margin: 5px 10px 5px 0;
}

ul.lineItemProdlist li.productListTemplateCart {
	width: 100%;
}
div.cartItemImgCont{
	margin-right: 10px;
}







/* RSS feed styles */
 
 h3.rssTitle {
 	color: #5D5D44;
 	font-weight: normal;
 	font-size: 20px;
 }
 
 .rssfeed {
 	margin: 0 auto 20px auto;
 	width: 990px;
 	display: table;
 	color: white;
 }
 
 .rssfeed a, .rssfeed a:visited {
 	color: white;
 	text-decoration: none;
 }
 
 .rssfeed h4 {
 	font-size: 26px;
 }
 
 .rssfeed a:hover, .rssfeed a:active {
 	color: white;
 	text-decoration: underline;
 }
 
 .blog1, .blog2, .blog3 {
 	background-color: #918484;
    border-right: 10px solid #FFFFFF;
    display: table-cell;
    float: left;
    height: 690px;
    padding: 15px 15px 0 25px;
    width: 270px;
 }
 
 .blog2, .blog3 {
 	margin-left: 15px;
 }
 
 .blog3 {
 	border-right: 0;
 }
 
 
 .rssRow p:last-child {
 	margin-bottom: 0;
 }
 
 .rssBody ul {
 	list-style: none;
 	padding-left: 0;
 	margin: 0;
}















/*************************************************************************************
	media querries - responsive design
*************************************************************************************/


/*989 - 800 X 480*/
@media screen and (max-width: 989px) {
	.wrapper{
		width:800px;
	}
	
	/*HEADER*/
	.header_ads{
		float: left;
		height: 50px;
		margin: 21px 0 0 5px;
		width: 180px;
	}
	.header_contact{
		margin: 6px 0 0 5px;
	}
	.header_cart_menu{
		margin-right: 5px;
	}
	#brandCategories li{
		margin: 0;
	}
	.nav_menu ul li a{
		padding: 21px 6px;
	}
	#brandCategories{
		display:block;
	}
	div.nav_menu div.caroufredsel_wrapper{
		overflow:visible !important;
		position:absolute !important;
		margin-top: 10px !important;
	}
	
	
	/*FOOTER*/
	.footer .sign_up_form_inner{
		width: 800px;
	}
	.social_icon{
		padding: 10px 5px 10px 0;
	}
	.sign_up_text{
		padding: 10px;
		width: 160px;
	}
	.sign_up_form_inner form{
		margin: 17px 5px 0 0;
	}
	.sign_up_form_inner form input{
		margin: 0 0 0 5px;
		width: 155px;
	}
	.sign_up_form_inner form input.submit{
		margin: 0 0 0 5px;
	}
	
	.footer .footer_bottom_inner{
		width: 800px;
	}
	.footer_widget{
		width: 169px;
	}
	.footer_copyright{
		width: 795px;
	}
	
	.nav_menu ul li:hover ul.child_menu{
		display:none !important;
	}
	
	
	/*HOMEPAGE*/
	input.productSearchKeyword {
		width: 270px;
	}
	.bannerDuoContainer .stacked{
		margin-right: 235px;
	}
	
	
	/*CATEGORY*/
	#categoryTemplate_hotels div.nativeProductList{
		width: 555px;
	}
	#categoryTemplate_hotels div.searchFilterResults{
		width: 555px;
	}
	
	/*PRODUCT*/
	.standardDef{
		display:block;
	}
	.sixhundredfourtyResolution{
		display:none;
	}
	.fourHundredEightyResolution{
		display:none;
	}
}
/* ... */

